force-app/main/default/objects/Product2/fields/Billable_Weight__c.field-meta.xml
<CustomField>
    <fullName>Billable_Weight__c</fullName>
    <label>Billable Weight</label>
    <length>10</length>
    <type>Text</type>
</CustomField>