force-app/main/default/objects/Product2/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <description>This field holds information coming from CNET for Features tab</description>
    <label>Features</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>