force-app/main/default/objects/Product2/fields/Key_Selling_Points__c.field-meta.xml
<CustomField>
    <fullName>Key_Selling_Points__c</fullName>
    <description>This field holds information coming from CNET for Key Selling Points tab</description>
    <label>Key Selling Points</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>