force-app/main/default/objects/Product2/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <label>Part Number</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>