force-app/main/default/objects/Product2/fields/Product_Title__c.field-meta.xml
<CustomField>
    <fullName>Product_Title__c</fullName>
    <label>Product Title</label>
    <type>TextArea</type>
</CustomField>