force-app/main/default/objects/Product2/fields/Specifications__c.field-meta.xml
<CustomField>
    <fullName>Specifications__c</fullName>
    <description>This field holds information coming from CNET for Specification tab</description>
    <label>Specifications</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>