force-app/main/default/objects/Product2/fields/UNSPSC_Code__c.field-meta.xml
<CustomField>
    <fullName>UNSPSC_Code__c</fullName>
    <label>UNSPSC Code</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>